--- a/procss0.css
+++ b/procss0.css
@@ -69,6 +69,8 @@ article p{
 
         .img{
             text-align: center;
+            min-width: 150px;
+            max-width: 600px;
         }
 
         .videocon{
