--- a/procss0.css
+++ b/procss0.css
@@ -69,9 +69,7 @@ article p{
 
         .img{
             text-align: center;
-            sizes="(max-width: 320px) 280px,
-            (max-width: 480px) 440px,
-            800px"
+            margin: 10px
         }
 
         .videocon{
