--- a/procss0.css
+++ b/procss0.css
@@ -69,7 +69,9 @@ article p{
 
         .img{
             text-align: center;
-            margin: 10px
+            margin: auto;
+            min-width: 320px;
+            max-width: 800px;
         }
 
         .videocon{
